Switch to java 8 and add jar artifact manifest